Edit pom.xml to enable module path usage for Maven Compiler plugin and remove unused Maven Surefire plugin in Crypto-Trader-Logging